--- a/loops_opdrachten/loops_opdracht_1/index.html
+++ b/loops_opdrachten/loops_opdracht_1/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>opdracht titel</title>
-    <script src="js/script.js"></script>
     <link rel="stylesheet" type="text/css"  href="css/style.css">
 </head>
 <body>
-    
+    <p id="demo"></p>
+    <script src="js/script.js"></script>
 </body>
 </html>
